crates/misc/dotnet/src/Interop.cs


        [DllImport(LibraryName)]
        public static extern IntPtr wasm_trap_new(StoreHandle store, ref wasm_byte_vec_t message);

        [DllImport(LibraryName)]
        public static extern void wasm_trap_delete(IntPtr trap);

        [DllImport(LibraryName)]
        public static extern void wasm_trap_message(IntPtr trap, out wasm_byte_vec_t message);

        // Table type imports

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_tabletype_element(IntPtr tableType);

        [DllImport(LibraryName)]
        public static unsafe extern wasm_limits_t* wasm_tabletype_limits(IntPtr tableType);

        // Memory type imports

        [DllImport(LibraryName)]
        public static unsafe extern wasm_limits_t* wasm_memorytype_limits(IntPtr memoryType);

        // Global imports

        [DllImport(LibraryName)]
        public static unsafe extern GlobalHandle wasm_global_new(StoreHandle handle, GlobalTypeHandle globalType, wasm_val_t* initialValue);

        [DllImport(LibraryName)]
        public static extern void wasm_global_delete(IntPtr global);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_global_type(IntPtr global);

        [DllImport(LibraryName)]
        public static unsafe extern void wasm_global_get(IntPtr global, wasm_val_t* value);

        [DllImport(LibraryName)]
        public static unsafe extern void wasm_global_set(IntPtr global, wasm_val_t* value);

        // Memory imports

        [DllImport(LibraryName)]
        public static extern MemoryHandle wasm_memory_new(StoreHandle handle, MemoryTypeHandle memoryType);

        [DllImport(LibraryName)]
        public static extern void wasm_memory_delete(IntPtr memory);

        [DllImport(LibraryName)]
        public static extern IntPtr wasm_memory_type(MemoryHandle memory);

        [DllImport(LibraryName)]
        public static unsafe extern byte* wasm_memory_data(IntPtr memory);

        [DllImport(LibraryName)]
        public static extern UIntPtr wasm_memory_data_size(IntPtr memory);

        [DllImport(LibraryName)]
        public static extern uint wasm_memory_size(MemoryHandle memory);

        [DllImport(LibraryName)]
        public static extern bool wasm_memory_grow(MemoryHandle memory, uint delta);

        // WASI config

        [DllImport(LibraryName)]
        public static extern WasiConfigHandle wasi_config_new();

        [DllImport(LibraryName)]
        public static extern void wasi_config_delete(IntPtr config);

        [DllImport(LibraryName)]
        public unsafe static extern void wasi_config_set_argv(WasiConfigHandle config, int argc, byte*[] argv);

        [DllImport(LibraryName)]
        public static extern void wasi_config_inherit_argv(WasiConfigHandle config);

        [DllImport(LibraryName)]
        public static extern unsafe void wasi_config_set_env(
            WasiConfigHandle config,
            int envc,
            byte*[] names,
            byte*[] values
        );

        [DllImport(LibraryName)]
        public static extern void wasi_config_inherit_env(WasiConfigHandle config);

        [DllImport(LibraryName)]
        public static extern bool wasi_config_set_stdin_file(
            WasiConfigHandle config,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path
        ); 

        [DllImport(LibraryName)]
        public static extern void wasi_config_inherit_stdin(WasiConfigHandle config);

        [DllImport(LibraryName)]
        public static extern bool wasi_config_set_stdout_file(
            WasiConfigHandle config,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path
        ); 

        [DllImport(LibraryName)]
        public static extern void wasi_config_inherit_stdout(WasiConfigHandle config);

        [DllImport(LibraryName)]
        public static extern bool wasi_config_set_stderr_file(
            WasiConfigHandle config,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path
        ); 

        [DllImport(LibraryName)]
        public static extern void wasi_config_inherit_stderr(WasiConfigHandle config);

        [DllImport(LibraryName)]
        public static extern bool wasi_config_preopen_dir(
            WasiConfigHandle config,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string guestPath
        );

        // WASI instance
        [DllImport(LibraryName)]
        public static extern WasiInstanceHandle wasi_instance_new(
            StoreHandle store,
            WasiConfigHandle config,
            out IntPtr trap
        );

        [DllImport(LibraryName)]
        public static extern void wasi_instance_delete(IntPtr instance);

        [DllImport(LibraryName)]
        public static extern IntPtr wasi_instance_bind_import(WasiInstanceHandle instance, IntPtr importType);
    }
}
